fix project outskirt title to align left

--- a/css/index.css
+++ b/css/index.css
@@ -159,11 +159,12 @@ body {
   margin: 0 auto;
 }
 .main {
-  padding: 0 8rem;
+  width: 84%;
+  margin: 0 auto;
 }
 @media (max-width: 500px) {
   .main {
-    padding: 0;
+    width: 100%;
   }
 }
 h1,
@@ -447,18 +448,18 @@ p {
     width: 90%;
   }
 }
-.project .project--item .project--item--img .project--img--title .left-align {
-  left: 0rem;
-}
-@media (max-width: 500px) {
-  .project .project--item .project--item--img .project--img--title .left-align {
-    left: 50%;
-  }
-}
 .project .project--item .project--item--img .project--img--title p {
   letter-spacing: 0.8rem;
   font-size: 2.4rem;
   margin: 0;
+}
+.project .project--item .left-align {
+  left: 0rem;
+}
+@media (max-width: 500px) {
+  .project .project--item .left-align {
+    left: 50%;
+  }
 }
 .project .project--item .project--item--text {
   margin: 8.2rem 0 10rem 0;
