--- a/less/global.less
+++ b/less/global.less
@@ -27,9 +27,10 @@ body {
 }
 
 .main {
-  padding: 0 8rem;
+  width: 84%;
+  margin: 0 auto;
   @media @mobile {
-    padding: 0;
+    width: 100%;
   } 
 }
 
